misc changes to support expression integration